fixed css to avoid jump in what we do labels

--- a/css/landing-mobile.css
+++ b/css/landing-mobile.css
@@ -142,7 +142,7 @@
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 620px) {
 
 #whatwedo {
 }
@@ -198,7 +198,7 @@
 		#whatwedo .whatwedo_content li {
 			display: block;
 			font-size: 15px;
-			width: 163px;
+			width: 200px;
 			box-sizing: border-box;
 			padding: 5px 5px 3px 5px;
 		}
